Updates from Overleaf

--- a/doc/FinalReport/FinalReport.tex
+++ b/doc/FinalReport/FinalReport.tex
@@ -171,13 +171,13 @@ Affordable housing is a widespread issue which pervades the United States. Yet, 
 \newpage
 
 \section{Introduction}
-Housing is a basic necessity that is in increasingly scarce supply in American cities. One of the roots of this problem is that a full-time or 40-hour work week at minimum wage often cannot cover housing costs (\href{https://reports.nlihc.org/oor/connecticut}{NLIHC, 2019}). Therefore, many Americans turn to public, that is, government-owned housing. \\
+Housing is a basic necessity that is in increasingly scarce supply in American cities. One of the roots of this problem is that a full-time or 40-hour work week at minimum wage often cannot cover housing costs~\cite{nlihc_out_2019}. Therefore, many Americans turn to public, that is, government-owned housing. \\
 \newline
 The public housing ecosystem concerns five main agents: the federal government’s Department of Housing and Urban Development (HUD), municipal governments responsible for local housing policy, individual government-employees  responsible for implementing the housing allocation processes, beneficiaries currently living in public housing, and applicants on a waiting list. Secondary agents are private residents who are the face of movements like NIMBY and YIMBYism (Not/Yes in My Backyard), as well as PHIMBYism (Public Housing in My Backyard) which, though not the focus of this paper, affect potential public housing reform discussions. \\
 \newline
 As of 2023, around 11 million Americans rely on housing assistance or reside in public housing. 66\% of this population is made up of racial minorities, 32\% are female-headed families with children, and 35\% identify as disabled. \\
 \newline
-The application for housing support from the government often looks like the following portal for New Haven’s \href{https://elmcitycommunities.org/waiting-list/}{Elm City Communities}, where users are invited to join a waiting list. See Figure 1 for details.
+The application for housing support from the government often looks like the following portal for New Haven’s Elm City Communities~\cite{elm_city_communities_public_nodate}, where users are invited to join a waiting list. See Figure 1 for details.
 \newline
 \begin{figure}
     \centering
@@ -186,7 +186,7 @@ The application for housing support from the government often looks like the fol
 \end{figure}
 \\ Misalignment emerges in such an ecosystem as the group that makes decisions about the distribution of housing and what features necessitate prioritization, i.e. government and government agents, is not benefiting from it. A growing crisis ensues as demand continues to outweigh the supply of public housing, with no solution in sight. \\
 \newline
-Consider New York City, where there are around 200,000 public housing units for 400,000 people. 178,000 people are currently on the waiting list (\href{https://www.cbpp.org/research/housing/long-waitlists-for-housing-vouchers-show-pressing-unmet-need-for-assistance}{Acosta, 2021}). San Diego and Miami-Dade counties hold even longer waiting lists, with most US municipal housing agencies having 1,000+ families on their waiting lists for a median wait time of nine months (\href{https://nlihc.org/news/closed-waiting-lists-and-long-waits-await-those-seeking-affordable-housing-according-new-nlihc#:~:text=Public%20Housing%20provides%20homes%20for,average%20size%20of%20834%20households.}{NILHC, 2019}). Some factors that provide priority status for applicants on these waiting lists include income, age, and disability status. \\
+Consider New York City, where there are around 200,000 public housing units for 400,000 people. 178,000 people are currently on the waiting list ~\cite{sonya_acosta_long_2021}. San Diego and Miami-Dade counties hold even longer waiting lists, with most US municipal housing agencies having 1,000+ families on their waiting lists for a median wait time of nine months~\cite{nlihc_out_2019}. Some factors that provide priority status for applicants on these waiting lists include income, age, and disability status. \\
 \newline
 % Although the specific algorithms used to allocate affordable housing are not available, there appear to be two types based on whether or not the applicant is given any choice in the allocation. For example, after they are selected for housing by a lottery system, they may be presented with one or more options to choose from. Better under-standing how the presence of this choice can mitigate or exacerbate biases could help public housing authorities assess the fairness of allocation schemes currently in use, as well as enable citizens to hold governments responsible for fair allocations of a scarce, basic resource.\\
 % \newline
@@ -194,11 +194,11 @@ In general, there are two main modes of allocating housing to those who want it.
  \newline
 There are two variations of non-market allocation algorithms depending on how much choice the recipient has. In the first, the recipient is presented with a choice of one or more units. They can either choose from among the set or choose to go back into the waitlist or lottery. While the fairness properties of different allocation schemes have been examined, to our knowledge, the fairness properties of allowing individuals to choose whether to accept or not is relatively understudied particularly in the presence of bias.\\
  \newline
-While reversing the affordable housing crisis initially seems a problem unlikely to be solved in our generation, it is an urgent reality that must be confronted. The main case for it relies on the benefits of residential stability. \href{https://nhc.org/wp-content/uploads/2017/03/The-Impacts-of-Affordable-Housing-on-Health-A-Research-Summary.pdf}{Lubell, Crain, and Cohen (2021)} have previously presented the positive impacts of affordable housing on health. Furthermore, secure housing also improves education outcomes by reducing high household mobility, of which the US has the highest rate across developed countries; there is a strong, negative relationship between such frequent residential mobility and educational performance. Lastly, in response to the argument that affordable housing threatens neighborhood property values,  \href{https://www.researchgate.net/publication/235355600_Affordable_Housing_Reader}{ Mueller and Tighe (2012)} demonstrate the community wide benefits of affordable housing.\\
+While reversing the affordable housing crisis initially seems a problem unlikely to be solved in our generation, it is an urgent reality that must be confronted. The main case for it relies on the benefits of residential stability.~\cite{maqbool_insightsfromhousing_nodate} There have also been accounts of positive impacts of affordable housing on health. Furthermore, secure housing also improves education outcomes by reducing high household mobility, of which the US has the highest rate across developed countries; there is a strong, negative relationship between such frequent residential mobility and educational performance. Lastly, in response to the argument that affordable housing threatens neighborhood property values, Tighe et al. ~\cite{tighe_affordable_2012}  demonstrate the community wide benefits of affordable housing.\\
 \newline
-There is widespread precedent in Europe that discussions on public housing reform can be destigmatized and the option be turned into a norm. For instance, in Vienna, 60 percent of the population lives in non-market housing in a broader integrated unitary housing market (\href{https://www.researchgate.net/publication/341951502_How_Much_State_and_How_Much_Market_Comparing_Social_Housing_in_Berlin_and_Vienna}{Glaser, 2020}). Similarly, Amsterdam's 30\% non-market housing is considered a middle class subsidy, not a government handout (\href{https://www.jchs.harvard.edu/blog/peoples-housing-non-profit-social-housing-netherlands}{Van Deursen, 2023}).\\
+There is widespread precedent in Europe that discussions on public housing reform can be destigmatized and the option be turned into a norm. For instance, in Vienna, 60 percent of the population lives in non-market housing in a broader integrated unitary housing market ~\cite{marquardt_how_2020} . Similarly, Amsterdam's 30\% non-market housing is considered a middle class subsidy, not a government handout~\cite{hanneke_van_deursen_peoples_2023}.\\
 \newline
-There are two significant bottlenecks in the United States that have previously prevented larger action on this issue that could lead to similar outcomes as in Europe. The first is a legislative measure; while some people may argue that this supply-side problem can be solved by building more public housing units, this is not legally possible due to oft-recurring challenges like the Nixon-era construction moratorium and Clinton Faircloth Amendment to the 1937 Housing Bill (\href{https://www.hud.gov/sites/documents/FRCLTH-LMT.PDF}{HUD}). The second concerns limited representation at City Council meetings across the nation whose inconvenient meeting times and lack of principled approach often lead to exclusions of certain populations (\href{https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8149917/}{McNee et Pojani, 2021}). Other related barriers include exclusionary zoning and parking requirements (\href{https://www.brookings.edu/articles/the-double-edged-sword-of-upzoning/#:~:text=Cities%20are%20in%20desperate%20need,contributes%20to%20rising%20housing%20costs}{Davis, 2021}).\\
+There are two significant bottlenecks in the United States that have previously prevented larger action on this issue that could lead to similar outcomes as in Europe. The first is a legislative measure; while some people may argue that this supply-side problem can be solved by building more public housing units, this is not legally possible due to oft-recurring challenges like the Nixon-era construction moratorium and Clinton Faircloth Amendment to the 1937 Housing Bill~\cite{hud_guidance_nodate}. The second concerns limited representation at City Council meetings across the nation whose inconvenient meeting times and lack of principled approach often lead to exclusions of certain populations ~\cite{mcnee_nimbyism_2022}. Other related barriers include exclusionary zoning and parking requirements~\cite{jenna_davis_double-edged_2021} .\\
 \newline
 The work of this paper will be twofold: first, we aim to model the existing conditions of our chosen city's public housing allocation, followed by assessing new priority systems and examining their effects on the demographics of those we predict will be offered public housing. Figure 3 shows these main tasks and contributions.\\
 \begin{figure}
@@ -226,23 +226,23 @@ In our project, we aim to analyze the demographic effects of tenant populations 
 \noindent
 Our city of choice to model policy changes is Baltimore beause of data vailability. With a population of close to 600,000 and a public housing system containing approximately 20,000 properties, Baltimore's robust and widely used public housing system is a suitable choice for analyzing the impacts of differing priority systems on allocation outcomes. \\
 \newline
-Demand for public housing in Baltimore is also exceedingly high. The public housing system lottery opened for the first time since 2019 in August of 2023, with nearly 30,000 applicants applying during the two week window (\href{https://www.wypr.org/wypr-news/2023-08-14/28-000-apply-for-baltimore-city-housing-wait-list-two-week-window-ends-tonight}{Baltimore WYPR}). Priority systems are therefore necessary to best allocate the limited available housing to those most in need. \\
+Demand for public housing in Baltimore is also exceedingly high. The public housing system lottery opened for the first time since 2019 in August of 2023, with nearly 30,000 applicants applying during the two week window~\cite{emily_hofstaedter_28000_nodate}. Priority systems are therefore necessary to best allocate the limited available housing to those most in need. \\
 \newline
 
 \subsection{Model Data and Privacy Considerations}
-\subsubsection{Overview}Our model will employ the 2021 \href{https://data.census.gov/mdat/#/search?ds=ACSPUMS5Y2021}{American Community Survey (ACS) microdata}. The ACS is an annual survey conducted with the aim of being a nationally representative sample of demographic, economic, and housing information. We will employ demographic variables contained in the ACS data to estimate the number of households eligible for public housing. To gain the most representative demographic variables, we specifically use the 5-year estimates, which average data over a five year period. \\
+\subsubsection{Overview}Our model will employ the 2021 American Community Survey (ACS) microdata~\cite{us_census_bureau_mdat_nodate}. The ACS is an annual survey conducted with the aim of being a nationally representative sample of demographic, economic, and housing information. We will employ demographic variables contained in the ACS data to estimate the number of households eligible for public housing. To gain the most representative demographic variables, we specifically use the 5-year estimates, which average data over a five year period. \\
 \newline
 Due to the sensitive information collected by the ACS, such as location, income, number of people in households, and so on, privacy considerations exist. Using this data, it could be possible to 'reverse engineer' the survey to gain knowledge about sensitive attributes. For instance, an adversary knowing a family's approximate location and income could use the survey to identify the household's response and gain knowledge about the disability status of the household members. \\
 \newline
-The ACS has taken steps to mitigate the exposure of sensitive attributes, such as perturbing the attributes uniquely of high income individuals. While the ACS previously hoped to attain differential privacy by 2025, this goal has \href{https://www.census.gov/newsroom/blogs/random-samplings/2022/12/disclosure-avoidance-protections-acs.html}{currently been put on hold} as a result of internal research finding that a formally private solution currently does not yet exist. Instead, alternative solutions like data perturbations and the inclusion of synthetic data in published ACS reports have been employed. \\
+The ACS has taken steps to mitigate the exposure of sensitive attributes, such as perturbing the attributes uniquely of high income individuals. While the ACS previously hoped to attain differential privacy by 2025, this goal has currently been put on hold~\cite{donna_daily_disclosure_nodate} as a result of internal research finding that a formally private solution currently does not yet exist. Instead, alternative solutions like data perturbations and the inclusion of synthetic data in published ACS reports have been employed. \\
 \newline
 Because of the existing measures taken by the ACS to preserve privacy, we do not feel that additional measures need to be taken, especially given that our model is reporting only on aggregate demographic changes as a result of different priority systems. However, in real world systems where technology is used in housing allocation, information security should be paramount. City officials should take care to ensure that individual applicant data is stored on secure servers and not susceptible to data breaches to the best of their ability. 
 \subsubsection{Data Processing}
-After downloading Baltimore City's data from the ACS website, we processed the raw file in R to yield a usable input into our model. We began by selecting only the relevant attributes specified in \autoref{3.2}. From there, we combined individuals into households by serial number and re-coded the data, disqualifying households whose total income exceeded $150\%$ of the poverty line (see Table 2). See the \href{https://github.com/atulpokh/cpsc464final/tree/main}{Github} repository for full  code. \\
+After downloading Baltimore City's data from the ACS website, we processed the raw file in R to yield a usable input into our model. We began by selecting only the relevant attributes specified in \autoref{3.2}. From there, we combined individuals into households by serial number and re-coded the data, disqualifying households whose total income exceeded $150\%$ of the poverty line (see Table 2). See the \href{https://github.com/atulpokh/cpsc464final/tree/main}{Github} repository for full code. \\
 \newline
 We proceed to describe our model, which allocates $M$ housing units to $N$ applicants. 
 \subsection{Housing Development Attributes}
-Let $M$ be the number of different of housing units. By the Housing Authority of Baltimore City, public housing authorities manage a little over $M = $ 20,000 units. Each housing unit $m$ is associated with a capacity (number of people who can live in the housing unit). Furthermore, we introduce another parameter $v$ that which represents the general vacancy rate (i.e. how many families leave their affordable housing units per period). \\
+Let $M$ be the number of different types of housing units. By the Housing Authority of Baltimore City, public housing authorities manage a little over $M = $ 20,000 units. Each housing unit $m$ is associated with a capacity (number of people who can live in the housing unit). Furthermore, we introduce another parameter $v$ that which represents the general vacancy rate (i.e. how many families leave their affordable housing units per period). \\
 \newline
 Given this list of $M$ housing units, we also want to determine the number of each unique housing type (in terms of size). Namely, we categorize this list of housing units by their capacity $c$. Let us denote the vector of different types of housing by $\mathcal{M}_u$, where each entry of $\mathcal{M}_u$ represents the number of units for each type of house (number of 1 bedrooms, 2 bedrooms, etc.). \\
 \newline
@@ -440,7 +440,9 @@ With steps:
 \end{algorithm}
 \newpage
 \section{Empirical results}
-Running our algorithm in Python on the cleaned Baltimore data, we get resulting wait times and probability of top choice for each household. We aggregate these data by racial group and visualize the these metrics for each priority system, as shown below. In these figures, blue bars represent the probability of top choice and red lines represent the average wait time to be housed in periods.
+Running our algorithm in Python on the cleaned Baltimore data, we get resulting wait times and probability of top choice for each household. We aggregate these data by racial group and visualize the these metrics for each priority system. \\
+\newline
+For each trial of the algorithm, we get a set of measures of fairness across groups. Below is an example of fairness measures for one such trial. In these figures, blue bars represent the probability of top choice and red lines represent the average wait time to be housed in periods.
         \begin{table}[h]
             \centering
                 \caption{Table of Percentage of Top Choice vs. Average Wait Time for Each Race Group \\
@@ -453,7 +455,21 @@ Running our algorithm in Python on the cleaned Baltimore data, we get resulting 
                 \end{tabular}%
         \end{table}
 \[\includegraphics[width=0.33\linewidth]{Veteran.png}\]
-\\Overall, we see relatively uniform results for some systems like Income, but more disjoint findings across racial groups for some systems like Children. We quantify these differences more concretely in the following section, defining and applying measures of fairness to our results.
+Running the simulation 
+
+
+ \begin{table}[h]
+            \centering
+                \caption{Distribution of top choice percentage by racial group and priority (10 experiments)\\
+                (Order by priority system: children, disability, elderly, low to high income, veteran status)}
+                \vspace{1.1em}
+                \begin{tabular}{cc}
+                    \includegraphics[width=0.5\linewidth]{doc/FinalReport/tcp1.png}
+                    & \includegraphics[width=0.5\linewidth]{doc/FinalReport/tcp2.png} \\[-4pt]
+                    \includegraphics[width=0.5\linewidth]{doc/FinalReport/tcp3.png} & \includegraphics[width=0.5\linewidth]{doc/FinalReport/tcp4.png} 
+                \end{tabular}%
+        \end{table}
+\[\includegraphics[width=0.5\linewidth]{tcp5.png}\]
 
 \section{(Desired) Theoretical results}
 
@@ -526,7 +542,7 @@ In summary, the Disability and Elderly priority systems emerge as strong perform
 \section{Next Steps, Limitations, and Future Work}
 A particularly salient area of future research considers consumer choice after considering the utility (perceived and actual) of their allocated public housing unit. This is useful in further making the ranking system more fair and efficient, so that more families accepts their initial housing draw – that is, through maximizing utility, each applicant(s) should be matched with housing that most suits their preferences so they don’t take up space for multiple units, or have to return to the waitlist after being being matched with an unsatisfactory unit. \\
 \newline
-In the past, families have been actively encouraged to apply to units in multiple locations to maximize their overall chance of being matched with housing. Though the average number of housing applications an American family submits is unknown, housing portals state, “The more lists you’re on, the higher your chances of being awarded a housing choice voucher” (\href{https://benefits.com/section-8/waiting-list/#:~:text=You%20can%20also%20apply%20with,awarded%20a%20housing%20choice%20voucher.}{Benefits.com}). This complexity has contributed to an increasing amount of time between tenants as agencies simultaneously hold different units for the same person, who will, ultimately, only choose the best unit. This extends the waiting time for everyone as that same applicant gets screened and contacted (both being time-intensive processes) for each of the various units they applied for. The Agawam Housing Authority in Massachusetts, for instance, reports that it takes years to find a new tenant, as hundreds of names must be analyzed before a match is found (\href{https://www.wbur.org/news/2023/09/19/massachusetts-state-funded-public-housing-waitlist-vacant}{Wallack \& Willmsen, 2023}). Scenarios like this result in phenomena like in the nearby town of Gardner, Massachusetts which has a vacancy rate of 21\%, meaning 70 out of 342 units are vacant even as the waitlist contains 11,775 people (\href{https://www.wbur.org/news/2023/09/19/massachusetts-state-funded-public-housing-waitlist-vacant}{Wallack \& Willmsen, 2023}). On a national scale, the \href{https://www.google.com/url?q=https://www.hud.gov/program_offices/public_indian_housing/programs/ph/PH_Dashboard?utm_medium%3Demail%26utm_source%3Dgovdelivery&sa=D&source=docs&ust=1697432365239122&usg=AOvVaw2yT-DQb6XprsdCaD2vsE1k}{Public Housing Dashboard put out by the HUD} reveals that there is a lesser, though still significant vacancy rate of five percent. Northwestern states like Oregon, Washington, and Idaho have higher-than-average occupancy rates while Kansas and Maryland have sub-90\% occupancy rates. All things considered, having any vacant unit can be considered a failure of the matching algorithm and have significant societal implications. \\
+In the past, families have been actively encouraged to apply to units in multiple locations to maximize their overall chance of being matched with housing. Though the average number of housing applications an American family submits is unknown, housing portals state, “The more lists you’re on, the higher your chances of being awarded a housing choice voucher” ~\cite{advisors_stuck_2023}. This complexity has contributed to an increasing amount of time between tenants as agencies simultaneously hold different units for the same person, who will, ultimately, only choose the best unit. This extends the waiting time for everyone as that same applicant gets screened and contacted (both being time-intensive processes) for each of the various units they applied for. The Agawam Housing Authority in Massachusetts, for instance, reports that it takes years to find a new tenant, as hundreds of names must be analyzed before a match is found~\cite{todd_wallack_mass_2023} . Scenarios like this result in phenomena like in the nearby town of Gardner, Massachusetts which has a vacancy rate of 21\%, meaning 70 out of 342 units are vacant even as the waitlist contains 11,775 people~\cite{todd_wallack_mass_2023} . On a national scale, the Public Housing Dashboard put out by the HUD reveals that there is a lesser, though still significant vacancy rate of five percent~\cite{hud_public_nodate}. Northwestern states like Oregon, Washington, and Idaho have higher-than-average occupancy rates while Kansas and Maryland have sub-90\% occupancy rates. All things considered, having any vacant unit can be considered a failure of the matching algorithm and have significant societal implications. \\
 \newline
 While determining if an algorithm maximizes utility initially seems like an especially useful mechanism for evaluating an algorithm’s fairness, it comes with certain drawbacks and limited technical feasibility. The first is that it, like many other fairness measures, relies on highly accurate data. However, inaccuracies can arise through human data entry leading to incorrect documentation of familial characteristics (e.g. number of children) or lack of up-to-date information on the state of or vacancy of housing (e.g. whether or not it is occupied or under renovation, thus unavailable). The curation of the former and maintenance of the latter is resource-intensive from a financial and human capital perspective. \\
 \newline
