--- a/doc/FinalReport/references.bib
+++ b/doc/FinalReport/references.bib
@@ -31,12 +31,6 @@
   year={2016}
 }
 
-@inproceedings{humanerror,
-  title={Preventing human error: The impact of data entry methods on data accuracy and statistical results, Computers in Human Behavior, Volume 27, Issue 5},
-  author={Barchard, Kimberly A. and Pace, Larry A.},
-  publisher={Department of Economics, Harvard University},
-  year={2016}
-}
 
 @inproceedings{humanerror,
   title={Preventing human error: The impact of data entry methods on data accuracy and statistical results, Computers in Human Behavior, Volume 27, Issue 5},
@@ -76,4 +70,192 @@
 }
 
 
-https://www.hud.gov/sites/dfiles/OCHCO/documents/27061.pdf
+
+@misc{nlihc_out_2019,
+	title = {Out of {Reach}: {Connecticut} {\textbar} {National} {Low} {Income} {Housing} {Coalition}},
+	shorttitle = {Out of {Reach}},
+	url = {https://nlihc.org/oor/state/ct},
+	abstract = {\#OOR23 shows how difficult it is for renters to find affordable housing. Find out how much a renter must earn to afford a modest home at https://nlihc.org/oor},
+    year = {2019},
+	language = {en},
+	urldate = {2023-12-02},
+	author = {{NLIHC}},
+	file = {Snapshot:/Users/pokharel/Zotero/storage/8VJFPED2/ct.html:text/html},
+}
+
+@misc{elm_city_communities_public_nodate,
+	title = {Public {Housing} \& {HCV}/{Section} 8 {Waiting} {List}},
+	url = {https://elmcitycommunities.org/waiting-list/},
+	abstract = {Trying to get on the Housing Choice Voucher (Section 8) waiting list? Need to check your current wait list status? Find out how here.},
+	language = {en-US},
+	urldate = {2023-12-02},
+	journal = {Elm City Communities},
+	author = {{Elm City Communities}},
+	file = {Snapshot:/Users/pokharel/Zotero/storage/UAF4WRHG/waiting-list.html:text/html},
+}
+
+@misc{sonya_acosta_long_2021,
+	title = {Long {Waitlists} for {Housing} {Vouchers} {Show} {Pressing} {Unmet} {Need} for {Assistance} {\textbar} {Center} on {Budget} and {Policy} {Priorities}},
+	url = {https://www.cbpp.org/research/housing/long-waitlists-for-housing-vouchers-show-pressing-unmet-need-for-assistance},
+	abstract = {Across the country, large numbers of families who need help to afford housing sit on long waiting lists for assistance. Among the 44 housing agencies for which we have data, nearly all have more than 1,000 families on their waiting lists and many have more than 10,000.},
+	language = {en},
+	urldate = {2023-12-02},
+	author = {{Sonya Acosta} and {Brianna Guerrero}},
+	month = oct,
+	year = {2021},
+	file = {Snapshot:/Users/pokharel/Zotero/storage/U8WMQ8DV/long-waitlists-for-housing-vouchers-show-pressing-unmet-need-for-assistance.html:text/html},
+}
+
+@article{maqbool_insightsfromhousing_nodate,
+	title = {{INSIGHTSfromHousing} {Policy} {Research}},
+	language = {en},
+	author = {Maqbool, Nabihah and Viveiros, Janet and Ault, Mindy},
+	file = {Maqbool et al. - INSIGHTSfromHousing Policy Research.pdf:/Users/pokharel/Zotero/storage/BVHJKTH4/Maqbool et al. - INSIGHTSfromHousing Policy Research.pdf:application/pdf},
+}
+
+@book{tighe_affordable_2012,
+	title = {Affordable {Housing} {Reader}},
+	isbn = {978-0-415-66938-2},
+	author = {Tighe, Rosie and Mueller, Elizabeth},
+	month = jan,
+	year = {2012},
+	doi = {10.4324/9780429299377},
+}
+
+@article{marquardt_how_2020,
+	title = {How {Much} {State} and {How} {Much} {Market}? {Comparing} {Social} {Housing} in {Berlin} and {Vienna}},
+	volume = {32},
+	shorttitle = {How {Much} {State} and {How} {Much} {Market}?},
+	doi = {10.1080/09644008.2020.1771696},
+	abstract = {This article examines the effect of two different social housing systems on housing-market characteristics and affordability using a case study of Berlin and Vienna. Despite comparable framework conditions, both cities pursued very different social housing policies. While both cities are currently challenged by growing populations and rising house prices, we show that Vienna is more successful in providing affordable housing as it has created effective institutions to attract and retain private actors in this sector. In Berlin, in contrast, the current crisis reveals the lack of institutional capacity to actively pursue housing policy. We argue that different housing market outcomes can be attributed to fundamental differences in the organisation of social housing provision reflecting divergent state-market relations. While in Berlin social housing has been seen as a provisional measure to correct temporary market imbalances, Vienna’s continuous state participation in the housing market has created a framework of balanced rights and responsibilities for social and private actors to achieve social policy goals. Differences in funding arrangements and institutional embeddedness influence not only housing outcomes but also feedback on the state’s capacity to intervene successfully in housing markets.},
+	journal = {German Politics},
+	author = {Marquardt, Susanne and Glaser, Daniel},
+	month = jun,
+	year = {2020},
+	pages = {1--20},
+	file = {Full Text PDF:/Users/pokharel/Zotero/storage/Q94YYZHR/Marquardt and Glaser - 2020 - How Much State and How Much Market Comparing Soci.pdf:application/pdf},
+}
+
+@misc{hanneke_van_deursen_peoples_2023,
+	title = {The {People}’s {Housing}: {Non}-profit {Social} {Housing} in the {Netherlands} {\textbar} {Joint} {Center} for {Housing} {Studies}},
+	shorttitle = {The {People}’s {Housing}},
+	url = {https://www.jchs.harvard.edu/blog/peoples-housing-non-profit-social-housing-netherlands},
+	language = {en},
+	urldate = {2023-12-02},
+	author = {{Hanneke van Deursen}},
+	month = jun,
+	year = {2023},
+	file = {Snapshot:/Users/pokharel/Zotero/storage/4CF24MXK/peoples-housing-non-profit-social-housing-netherlands.html:text/html},
+}
+
+@article{mcnee_nimbyism_2022,
+	title = {{NIMBYism} as a barrier to housing and social mix in {San} {Francisco}},
+	volume = {37},
+	issn = {1566-4910},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8149917/},
+	doi = {10.1007/s10901-021-09857-6},
+	abstract = {We explore the participation levels of NIMBY (‘Not In My Backyard’) proponents versus other voices at public hearings San Francisco, a city with an exceptionally dire housing crisis. Once very diverse, radical, and bohemian, San Francisco has become the most expensive city in the US, which caters to a wealthy minority—heavily connected to the tech industries of the neighboring Silicon Valley. Taking a qualitative approach, we review videos of planning commission meetings between 2018 and 2019 in San Francisco in which housing development proposals are considered. We find that NIMBYism continues to dominate the dialog at public hearings on development proposals. Planning meetings appear to be dominated by older, white, and financially stable residents, and this is a major (though not sole) barrier to the city’s social mix.},
+	number = {1},
+	urldate = {2023-12-02},
+	journal = {Journal of Housing and the Built Environment},
+	author = {McNee, Georgina and Pojani, Dorina},
+	year = {2022},
+	pmid = {34054378},
+	pmcid = {PMC8149917},
+	pages = {553--573},
+	file = {PubMed Central Full Text PDF:/Users/pokharel/Zotero/storage/ECAPNPUB/McNee and Pojani - 2022 - NIMBYism as a barrier to housing and social mix in.pdf:application/pdf},
+}
+
+@misc{jenna_davis_double-edged_2021,
+	title = {The double-edged sword of upzoning},
+	url = {https://www.brookings.edu/articles/the-double-edged-sword-of-upzoning/},
+	abstract = {Jenna Davis writes about the evidence of the debate on a spate of upzonings in New York City between 2000 and 2010 and the policy implications of these findings.},
+	language = {en-US},
+	urldate = {2023-12-02},
+	journal = {Brookings},
+	author = {{Jenna Davis}},
+	month = jul,
+	year = {2021},
+	file = {Snapshot:/Users/pokharel/Zotero/storage/V3W9892R/the-double-edged-sword-of-upzoning.html:text/html},
+}
+
+@misc{emily_hofstaedter_28000_nodate,
+	title = {28,000 apply for {Baltimore} {City} housing wait-list; two week window ends tonight {\textbar} {WYPR}},
+	url = {https://www.wypr.org/wypr-news/2023-08-14/28-000-apply-for-baltimore-city-housing-wait-list-two-week-window-ends-tonight},
+	urldate = {2023-12-02},
+	author = {{Emily Hofstaedter}},
+	file = {28,000 apply for Baltimore City housing wait-list\; two week window ends tonight | WYPR:/Users/pokharel/Zotero/storage/QC642NED/28-000-apply-for-baltimore-city-housing-wait-list-two-week-window-ends-tonight.html:text/html},
+}
+
+@misc{us_census_bureau_mdat_nodate,
+	title = {{MDAT}},
+	url = {https://data.census.gov/mdat/#/search?ds=ACSPUMS5Y2021},
+	urldate = {2023-12-02},
+	author = {{US census Bureau}},
+	file = {MDAT:/Users/pokharel/Zotero/storage/KE7TJKCH/mdat.html:text/html},
+}
+
+@misc{bureau_disclosure_nodate,
+	title = {Disclosure {Avoidance} {Protections} for the {American} {Community} {Survey}},
+	url = {https://www.census.gov/newsroom/blogs/random-samplings/2022/12/disclosure-avoidance-protections-acs.html},
+	abstract = {We've heard from a number of data users lately who have questions about the status of our plans to strengthen confidentiality safeguards for our data products.},
+	urldate = {2023-12-02},
+	journal = {Census.gov},
+	author = {Bureau, US Census},
+	note = {Section: Government},
+	file = {Snapshot:/Users/pokharel/Zotero/storage/BYRYBDBH/disclosure-avoidance-protections-acs.html:text/html},
+}
+
+@misc{advisors_stuck_2023,
+	title = {Stuck on a {Section} 8 {Waiting} {List}? {Here}'s {How} to {Get} {Priority}},
+	shorttitle = {Stuck on a {Section} 8 {Waiting} {List}?},
+	url = {https://benefits.com/section-8/waiting-list/},
+	abstract = {Often, the wait for rental assistance can take years, though some applicants can receive special treatment and be bumped to the top of the list.},
+	urldate = {2023-12-02},
+	journal = {Benefits.com},
+	author = {Advisors, Benefits com},
+	month = oct,
+	year = {2023},
+	file = {Snapshot:/Users/pokharel/Zotero/storage/ATQVJGTK/waiting-list.html:text/html},
+}
+
+@misc{todd_wallack_mass_2023,
+	title = {Mass. has a huge waitlist for state-funded housing. {So} why are 2,300 units vacant?},
+	url = {https://www.wbur.org/news/2023/09/19/massachusetts-state-funded-public-housing-waitlist-vacant},
+	abstract = {As Massachusetts grapples with a housing crisis, 184,000 people have applied for a home in the state's public housing system. Yet, units sit vacant for years because of the state's inefficient central waitlist and a lack of funding to repair aging properties.},
+	language = {en},
+	urldate = {2023-12-02},
+	author = {{Todd Wallack} and {Christine Willmsen}},
+	month = sep,
+	year = {2023},
+	file = {Snapshot:/Users/pokharel/Zotero/storage/PFQNW9BK/massachusetts-state-funded-public-housing-waitlist-vacant.html:text/html},
+}
+
+@misc{hud_public_nodate,
+	title = {Public {Housing} ({PH}) {Data} {Dashboard}},
+	url = {https://www.hud.gov/program_offices/public_indian_housing/programs/ph/PH_Dashboard},
+	language = {en},
+	urldate = {2023-12-02},
+	journal = {HUD.gov / U.S. Department of Housing and Urban Development (HUD)},
+	author = {{HUD}},
+	file = {Snapshot:/Users/pokharel/Zotero/storage/TRYK2EP5/PH_Dashboard.html:text/html},
+}
+
+@misc{hud_guidance_nodate,
+	title = {Guidance on {Complying} {With} the {Maximum} {Number} of {Units} {Eligible} for {Operating} {Subsidy}},
+	url = {https://www.hud.gov/sites/documents/FRCLTH-LMT.PDF},
+	urldate = {2023-12-02},
+	author = {{HUD}},
+	file = {FRCLTH-LMT.pdf:/Users/pokharel/Zotero/storage/9GYVTXUA/FRCLTH-LMT.pdf:application/pdf},
+}
+
+@misc{donna_daily_disclosure_nodate,
+	title = {Disclosure {Avoidance} {Protections} for the {American} {Community} {Survey}},
+	url = {https://www.census.gov/newsroom/blogs/random-samplings/2022/12/disclosure-avoidance-protections-acs.html},
+	abstract = {We've heard from a number of data users lately who have questions about the status of our plans to strengthen confidentiality safeguards for our data products.},
+	urldate = {2023-12-02},
+	journal = {Census.gov},
+	author = {Donna Daily},
+	note = {Section: Government},
+	file = {Snapshot:/Users/pokharel/Zotero/storage/BYRYBDBH/disclosure-avoidance-protections-acs.html:text/html},
+}
